made some changes to reame file

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <header class="header">
-        <h1><a href="file:///Users/abduljabar/challenge1/assets/Horiseon-Challenge-1/index.html"> Hori<span class="seo">seo</span>n</a></h1>
+        <h1><a href="https://abduljabar5.github.io/Horiseon-Challenge-1/"> Hori<span class="seo">seo</span>n</a></h1>
         <nav>
             <ul>
                 <li>
